# computer-vision

./: .gitignore  README.md  check_augmentation.py  create_data_set.py  environment.yml  load_images_unit_test.py  requirements.txt  single_image_prediction.py  training.py
data/indoor_outdoor_raw/: video_category_data.json
indoor_outdoor/: create_data_set.py  dataset.py  setup.cfg  single_image_prediction.py  training.py
indoor_outdoor/Distutils.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
indoor_outdoor/utils/: config.py  gpu_config.py
model/: model.py
tests/: check_augmentation.py  load_images_unit_test.py  test_load_images.py
utils/: config.py  dataset.py  image_functions.py  utils.py
