[metadata]
name = Distutils
version = 1.0
description = Python Distribution Utilities
url = https://github.com/bchadburn/computer-vision
author = Brennen Chadburn
author_email = brennenchadburn@gmail.com
license = MIT
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    modeling
    utils
